# django-dlcdb

./: .containerignore  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  Containerfile  Makefile  NEWS.md  README.md  REUSE.toml  context.json  context.template.json  env.template  eslint.config.mjs  generate-pod.sh  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg
.reuse/: dep5
Containerfiles/: README.Container.md  apache-vhost-dlcdb.conf  entrypoint.sh  env.production
container/: Containerfile  README.Container.md  entrypoint.sh
dlcdb/: __init__.py  conftest.py  urls.py  wsgi.py
dlcdb/accounts/: admin.py  apps.py  auth_backends.py  forms.py  models.py
dlcdb/accounts/migrations/: 0001_initial.py  0002_group.py  0003_alter_customuser_email.py
dlcdb/accounts/tests/: test_login.py
dlcdb/api/: apps.py  serializers.py  urls.py  views.py
dlcdb/api/tests/: test_record_state_contract.py
dlcdb/assets/: apps.py  filters.py  forms.py  move.py  navigation.py  pickers.py  urls.py  views.py
dlcdb/assets/tests/: __init__.py  test_devices.py  test_masterdata.py  test_navigation.py  test_relocate.py
dlcdb/assets/views/: __init__.py  devices.py  masterdata.py  relocate.py
dlcdb/core/: apps.py  context_processors.py  lifecycle.py  navigation.py  stats.py  storage.py  tasks.py  ui_helpers.py  urls.py  widgets.py
dlcdb/core/admin/: __init__.py  attachment_admin.py  base_admin.py  device_admin.py  devicetype_admin.py  importerlist_admin.py  inroomrecord_admin.py  inventory_admin.py  lentrecord_admin.py  licencerecord_admin.py  logentry_admin.py  lostrecord_admin.py  manufacturer_admin.py  misc_admin.py  note_admin.py  orderedrecord_admin.py  person_admin.py  record_admin.py  removedrecord_admin.py  removerlist_admin.py  room_admin.py  supplier_admin.py
dlcdb/core/forms/: adminactions_forms.py  importer_admin_form.py  inroomrecordadmin_form.py  lentlocalization_form.py  lentrecordadmin_form.py  procure_forms.py  proxyrecord_admin_form.py  removedrecord_form.py  removerlist_admin_form.py  room_forms.py
dlcdb/core/migrations/: 0001_initial.py  0002_device_tenant.py  0003_alter_device_tenant.py  0004_remove_device_affiliation_alter_importerlist_file.py  0005_delete_affiliation.py  0006_alter_importerlist_file.py  0007_roomreconcile.py  0008_alter_importerlist_file.py  0009_person_udb_contract_contract_type_and_more.py  0010_person_created_at_person_deleted_at_and_more.py  0011_alter_person_email.py  0012_alter_person_unique_together_and_more.py  0013_person_unique_dlcdb_person_name_and_more.py  0014_person_udb_person_uuid.py  0015_device_sap_id_validator.py  0016_delete_dialogdevice.py  0017_delete_inventoryroom.py  0018_remove_saplistcomparisonresult_sap_list_and_more.py  0019_historicaldevice.py  0020_alter_historicaldevice_qrcode.py  0021_device_order_number_historicaldevice_order_number.py  0022_alter_historicaldevice_options_and_more.py  0023_alter_person_department.py  0024_person_udb_person_image.py  0025_organizationalunit_person_organizational_unit.py  0026_remove_person_department.py  0027_device_backup_encryption_key_and_more.py  0028_remove_device_former_nick_names_and_more.py  0029_manufacturer_manufacturer_manufacturer_name_unique_and_more.py  (+44 more)
dlcdb/dashboard/: __init__.py  apps.py  stats.py  urls.py  views.py
dlcdb/dataexchange/: admin.py  apps.py  csv_template.py  fields.py  forms.py  importer.py  models.py  navigation.py  records.py  remover.py  reporting.py  sap_converter.py  tasks.py  udb_sync.py  urls.py  validators.py  views.py
dlcdb/inventory/: admin.py  apps.py  context_processors.py  filters.py  forms.py  models.py  navigation.py  sap.py  tests.py  urls.py  utils.py  views.py
dlcdb/lending/: admin.py  apps.py  context_processors.py  decorators.py  filters.py  forms.py  loader.py  middleware.py  models.py  navigation.py  pickers.py  urls.py  views.py
dlcdb/licenses/: admin.py  apps.py  decorators.py  filters.py  forms.py  models.py  navigation.py  subscribers.py  urls.py  views.py  views_calendar.py
dlcdb/notifications/: admin.py  apps.py  channels.py  email_footer.py  forms.py  intervals.py  models.py  overdue_lenders.py  reports.py  services.py  tasks.py  urls.py  views.py
dlcdb/organization/: admin.py  apps.py  context_processors.py  models.py  navigation.py  views.py
dlcdb/persons/: apps.py  filters.py  forms.py  navigation.py  urls.py  views.py
dlcdb/reporting/: admin.py  apps.py  models.py  services.py  settings.py  tasks.py
dlcdb/rooms/: apps.py  filters.py  forms.py  navigation.py  urls.py  views.py
dlcdb/settings/: __init__.py  base.py  dev.py  ldap.py  production.py  test.py
dlcdb/smallstuff/: admin.py  apps.py  filters.py  forms.py  models.py  navigation.py  urls.py  views.py
dlcdb/templates/: 403.html  logout_link.html  print_base.html
dlcdb/tenants/: admin.py  apps.py  backends.py  managers.py  middleware.py  models.py  shortcuts.py
dlcdb/theme/: apps.py  context_processors.py  filterbar.py  forms.py  lifecycle_display.py  pagination.py  pickers.py  urls.py  views.py  widgets.py
docs/: Makefile  conf.py  faq.md  index.md  index.rst  konzept.md
docs/_static/: Ausbuchungsbeleg_Anlagen.docx  dlcdb_csv_import_template.csv  relocate.webm
docs/betrieb/: api.md  hr-sync.md  index.md  management_commands.md  model.md  news.md  setup.md  udb.md
docs/chapters/: api.md  api.rst  ausleihe.md  ausleihe.rst  ausmustern.md  ausmustern.rst  faq.md  import.rst  inventur.md  inventur.rst  lizenzen.rst  model.md  model.rst  reporting.md  reporting.rst  setup.md  setup.rst  udb.md  udb.rst  umziehen.rst
docs/guides/: ausleihe.md  ausmustern.md  devices.md  erste_schritte.md  import.md  index.md  inventur.md  kleinkram.md  lizenzen.md  notifications.md  reporting.md  umziehen.md
frontend/common/: _fontawesome.scss
frontend/js/: app.js
frontend/scss/: app.scss  print.scss
requirements/: dev.txt  prod-ldap.txt  prod.txt  requirements-dev.txt  requirements-prod-ldap.txt  requirements-prod.txt
(+433 files in other folders)
