[build-system]
requires = ["setuptools", "pip-tools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
preview-string-processing = true
# skip-string-normalization = true
target-version = ['py39']
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | node_modules
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
skip = ["migrations",".git","__pycache__","LC_MESSAGES",".venv"]
blocked_extensions = ["rst","html","js","svg","txt","css","scss","png","jpg"]
default_section = "THIRDPARTY"
