[metadata]
name = django-dlcdb
author = Thomas Breitner
author_email = t.breitner@csl.mpg.de
url = https://gitlab.gwdg.de/t.breitner/django-dlcdb
description = Device Live Cycle Database
long_description = file: README.md
long_description_content_type = text/markdown
license = EUPL-1.2
classifiers =
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Programming Language :: Python :: 3
    Framework :: Django
project_urls =
    Documentation = https://gitlab.gwdg.de/t.breitner/django-dlcdb/-/tree/main/docs
    Source = https://gitlab.gwdg.de/t.breitner/django-dlcdb
    Tracker = https://gitlab.gwdg.de/t.breitner/django-dlcdb/-/issues

[options]
include_package_data = true
python_requires = >=3.9
packages = find:
install_requires =
    Django==4.1.3
    django-select2
    django-environ
    django-crispy-forms
    django-simple-history
    django-htmx
    # pymemcache  # needed by django-select2; currently trying the builtin db cache backend
    python-magic
    huey
    openpyxl
    markdown
    Pillow
    segno
    djangorestframework
    django-filter
    Sphinx
    sphinx_rtd_theme
    sphinxcontrib-mermaid
    myst_parser

[options.extras_require]
ldap =
    django-auth-ldap

testsite =
    tox
    isort
    black
    flake8
    pre-commit
    mypy
    pytest
    pytest-django
    pytest-cov

dev =
    %(testsite)s
    django-auth-ldap
    django-debug-toolbar
    django_extensions
    # for js qr scanner https connections on localhost runserver:
    # see: https://github.com/django-extensions/django-extensions/issues/1475
    # Werkzeug==0.16.1
    pyOpenSSL


# Get rid of top level django_dlcdb.egg-info artifact
[build]
build-base = temp/build

[egg_info]
egg-base = temp

[flake8]
ignore = E501
exclude = .git,*/migrations/*,*/tests/*
max-line-length = 119

# Run with: pylint --rcfile=setup.cfg somepackage
[pylint]
disable = C0301, C0111
ignore = migrations, tests
ignore-docstrings = yes
output-format = colorized
max-line-length = 119

[tool:pytest]
DJANGO_SETTINGS_MODULE = dlcdb.settings.dev
norecursedirs = 
    */node_modules/*
    */.venv/*
addopts = --cov=.
    --cov-report term-missing:skip-covered
    # --cov-fail-under 100

[coverage:run]
source = .
omit = 
    */node_modules/*
    */.venv/*
branch = True

[coverage:report]
# fail_under = 100
show_missing = True
skip_covered = True
